# postgres-dev-setup

./: .gitignore  README.md  pgctl  postgres-config.json  pyproject.toml
.github/workflows/: build.yml  test.yml
config/: postgres-config.json
docs/: CONFIGURATION.md  REFACTORING_GUIDE.md
scripts/: backup.sh  restore.sh
src/postgres_setup/: __init__.py  cli.py  config.py  core.py  docker_manager.py  domain.py  main.py  setup.py
src/postgres_setup/commands/: __init__.py  backup.py  base.py  config.py  destroy.py  info.py  logs.py  psql.py  restart.py  restore.py  setup.py  start.py  status.py  stop.py  test.py
tests/: test_commands.py  test_domain.py
