[project]
name = "postgres-dev-setup"
version = "0.1.0"
description = "PostgreSQL Development Environment Manager"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "pyright>=1.1.370",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
